--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,60 @@
         const db = firebase.firestore();
 
         // User Authentication System
-        const users = JSON.parse(localStorage.getItem('users')) || [];
+        <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { 
+    getAuth, 
+    createUserWithEmailAndPassword, 
+    signInWithEmailAndPassword, 
+    onAuthStateChanged, 
+    signOut 
+  } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_PROJECT.firebaseapp.com",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_PROJECT.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  // Signup
+  async function signUp() {
+    const email = document.getElementById("signupEmail").value;
+    const password = document.getElementById("signupPassword").value;
+    await createUserWithEmailAndPassword(auth, email, password);
+    alert("Account created!");
+  }
+
+  // Login
+  async function login() {
+    const email = document.getElementById("loginEmail").value;
+    const password = document.getElementById("loginPassword").value;
+    await signInWithEmailAndPassword(auth, email, password);
+    alert("Logged in!");
+  }
+
+  // Logout
+  async function logout() {
+    await signOut(auth);
+    alert("Logged out!");
+  }
+
+  // Auto login on page load (multi-device persistence)
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      console.log("User logged in:", user.email);
+    } else {
+      console.log("No user logged in.");
+    }
+  });
+</script>
+
         let currentUser = null;
         
         // DOM Elements for Login/Signup
