--- a/index.html
+++ b/index.html
@@ -3764,5 +3764,232 @@
         window.editEmployeeAttendance = editEmployeeAttendance;
         window.filterEmployeeDetailsByMonth = filterEmployeeDetailsByMonth;
     </script>
+
+<script type="module">
+/* Firebase modular SDK imports */
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import {
+  getAuth,
+  createUserWithEmailAndPassword,
+  signInWithEmailAndPassword,
+  onAuthStateChanged,
+  signOut,
+  setPersistence,
+  browserLocalPersistence
+} from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+import {
+  getFirestore,
+  collection,
+  doc,
+  getDocs,
+  setDoc,
+  deleteDoc,
+  writeBatch,
+  serverTimestamp,
+  query,
+  where,
+  getDoc,
+  orderBy,
+  onSnapshot
+} from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+
+/* --- Your Firebase config --- */
+const firebaseConfig = {
+  apiKey: "AIzaSyDytXwqVBTKJBBpTymDadTpmt8CR0LQSCM",
+  authDomain: "wagewise-payroll-e6a84.firebaseapp.com",
+  projectId: "wagewise-payroll-e6a84",
+  storageBucket: "wagewise-payroll-e6a84.appspot.com",
+  messagingSenderId: "1077952021877",
+  appId: "1:1077952021877:web:6844674a44973506d2bf3c"
+};
+
+/* Initialize Firebase */
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+
+/* Persist auth across sessions */
+await setPersistence(auth, browserLocalPersistence).catch(e => console.warn('setPersistence', e));
+
+/* Simple helpers (non-intrusive) */
+function _toast(msg, type='info') {
+  try {
+    const id = 'ww_toast_container';
+    let c = document.getElementById(id);
+    if (!c) { c = document.createElement('div'); c.id = id; c.style.position='fixed'; c.style.right='18px'; c.style.top='18px'; c.style.zIndex=9999; document.body.appendChild(c); }
+    const el = document.createElement('div');
+    el.textContent = msg;
+    el.style.marginTop = '8px'; el.style.padding = '8px 12px'; el.style.borderRadius = '8px'; el.style.color = '#fff';
+    el.style.boxShadow = '0 6px 18px rgba(0,0,0,0.08)';
+    el.style.background = type === 'error' ? '#ef4444' : (type === 'success' ? '#10b981' : '#2563eb');
+    c.appendChild(el);
+    setTimeout(()=>{ el.style.opacity = '0'; setTimeout(()=>el.remove(),300); }, 3000);
+  } catch(e) { console.log('toast error', e); }
+}
+
+function _showLoading(show=true) {
+  try {
+    const id = 'ww_loading_overlay';
+    let o = document.getElementById(id);
+    if (!o) {
+      o = document.createElement('div'); o.id = id;
+      Object.assign(o.style, {position:'fixed',left:0,top:0,width:'100%',height:'100%',display:'flex',alignItems:'center',justifyContent:'center',background:'rgba(255,255,255,0.6)',zIndex:9998});
+      o.innerHTML = '<div style="padding:12px;border-radius:8px;background:#fff;box-shadow:0 8px 30px rgba(0,0,0,0.08);font-weight:600;">Working...</div>';
+      document.body.appendChild(o);
+    }
+    o.style.display = show ? 'flex' : 'none';
+  } catch(e) { console.log(e); }
+}
+
+/* Attach to existing login/signup buttons if present (non-intrusive) */
+try {
+  const loginBtn = document.getElementById('login-btn');
+  const signupBtn = document.getElementById('signup-btn');
+  const logoutButtons = document.querySelectorAll('#logout-btn');
+
+  if (signupBtn) signupBtn.addEventListener('click', async (ev) => {
+    ev.preventDefault();
+    const email = (document.getElementById('signup-email')||{}).value || '';
+    const password = (document.getElementById('signup-password')||{}).value || '';
+    try { _showLoading(true); await createUserWithEmailAndPassword(auth, email, password); _toast('Signed up & logged in','success'); }
+    catch(err){ console.error(err); _toast(err.message || 'Signup failed','error'); }
+    finally{ _showLoading(false); }
+  });
+
+  if (loginBtn) loginBtn.addEventListener('click', async (ev) => {
+    ev.preventDefault();
+    const email = (document.getElementById('login-email')||{}).value || '';
+    const password = (document.getElementById('login-password')||{}).value || '';
+    try { _showLoading(true); await signInWithEmailAndPassword(auth, email, password); _toast('Logged in','success'); }
+    catch(err){ console.error(err); _toast(err.message || 'Login failed','error'); }
+    finally{ _showLoading(false); }
+  });
+
+  logoutButtons.forEach(b => b.addEventListener('click', async () => {
+    try { await signOut(auth); _toast('Logged out','info'); }
+    catch(e) { console.error('logout', e); _toast('Logout failed','error'); }
+  }));
+} catch(e) { console.error('attach auth handlers', e); }
+
+/* Live-sync per-user functions (exposed on window so your existing UI calls continue to work) */
+let _empUnsub = null;
+let _attUnsub = null;
+window._employees_cache = [];
+window._attendance_cache = {};
+
+async function startLiveSyncEmployees(uid) {
+  try {
+    if (_empUnsub) { _empUnsub(); _empUnsub = null; }
+    const q = query(collection(db, 'employees'), where('ownerUid', '==', uid), orderBy('updatedAt'));
+    _empUnsub = onSnapshot(q, snapshot => {
+      const arr = [];
+      snapshot.forEach(d => arr.push({ id: d.id, ...d.data() }));
+      window._employees_cache = arr;
+      try { if (typeof renderEmployeeTable === 'function') renderEmployeeTable(); } catch(e) { console.error('renderEmployeeTable', e); }
+      try { if (typeof populatePayrollEmployeeDropdown === 'function') populatePayrollEmployeeDropdown(); } catch(e) {}
+    }, err => {
+      console.error('employees onSnapshot', err);
+    });
+  } catch(e) { console.error('startLiveSyncEmployees', e); }
+}
+
+async function startLiveSyncAttendance(uid) {
+  try {
+    if (_attUnsub) { _attUnsub(); _attUnsub = null; }
+    const q = query(collection(db, 'attendance'), where('ownerUid', '==', uid), orderBy('date'));
+    _attUnsub = onSnapshot(q, snapshot => {
+      const map = {};
+      snapshot.forEach(d => map[d.id] = d.data());
+      window._attendance_cache = map;
+      try { if (typeof renderEmployeeAttendanceList === 'function') renderEmployeeAttendanceList(); } catch(e) { console.error('renderEmployeeAttendanceList', e); }
+      try { if (typeof updateAttendanceSummary === 'function') updateAttendanceSummary(); } catch(e) {}
+    }, err => {
+      console.error('attendance onSnapshot', err);
+    });
+  } catch(e) { console.error('startLiveSyncAttendance', e); }
+}
+
+/* Save employee (create/update) */
+async function saveEmployeeToFirestore(employeeData) {
+  const user = auth.currentUser;
+  if (!user) { _toast('Login required','error'); return; }
+  _showLoading(true);
+  try {
+    const id = employeeData.id || ('EMP' + Math.random().toString(36).slice(2,9).toUpperCase());
+    await setDoc(doc(db, 'employees', id), { ...employeeData, ownerUid: user.uid, updatedAt: serverTimestamp() });
+    _toast('Employee saved','success');
+  } catch(e) { console.error('saveEmployeeToFirestore', e); _toast('Save failed','error'); }
+  finally { _showLoading(false); }
+}
+
+/* Delete employee */
+async function deleteEmployeeFromFirestore(id) {
+  const user = auth.currentUser;
+  if (!user) { _toast('Login required','error'); return; }
+  _showLoading(true);
+  try {
+    const ref = doc(db, 'employees', id);
+    const snap = await getDoc(ref);
+    if (snap.exists() && snap.data().ownerUid === user.uid) {
+      await deleteDoc(ref);
+      _toast('Employee deleted','success');
+    } else {
+      _toast('Not authorized to delete','error');
+    }
+  } catch(e) { console.error('deleteEmployeeFromFirestore', e); _toast('Delete failed','error'); }
+  finally { _showLoading(false); }
+}
+
+/* Save attendance */
+async function saveSingleAttendanceDate(date, recordObj) {
+  const user = auth.currentUser;
+  if (!user) { _toast('Login required','error'); return; }
+  _showLoading(true);
+  try {
+    await setDoc(doc(db, 'attendance', date), { ...recordObj, ownerUid: user.uid, date, updatedAt: serverTimestamp() });
+    window._attendance_cache[date] = recordObj;
+    _toast('Attendance saved for ' + date, 'success');
+  } catch(e) { console.error('saveSingleAttendanceDate', e); _toast('Save failed','error'); }
+  finally { _showLoading(false); }
+}
+
+/* Push all attendance (batch) */
+async function pushAttendanceToFirebase() {
+  const user = auth.currentUser;
+  if (!user) { _toast('Login required','error'); return; }
+  _showLoading(true);
+  try {
+    const batch = writeBatch(db);
+    const existing = await getDocs(query(collection(db, 'attendance'), where('ownerUid', '==', user.uid)));
+    existing.forEach(s => batch.delete(doc(db, 'attendance', s.id)));
+    Object.keys(window.attendanceRecords || {}).forEach(date => {
+      batch.set(doc(db, 'attendance', date), { ...window.attendanceRecords[date], ownerUid: user.uid, date, updatedAt: serverTimestamp() });
+    });
+    await batch.commit();
+    _toast('Attendance pushed','success');
+  } catch(e) { console.error('pushAttendanceToFirebase', e); _toast('Push failed','error'); }
+  finally { _showLoading(false); }
+}
+
+/* Expose functions for existing UI code */
+window.saveEmployeeToFirestore = saveEmployeeToFirestore;
+window.deleteEmployeeFromFirestore = deleteEmployeeFromFirestore;
+window.saveSingleAttendanceDate = saveSingleAttendanceDate;
+window.pushAttendanceToFirebase = pushAttendanceToFirebase;
+
+/* Start live sync when auth state changes */
+onAuthStateChanged(auth, (user) => {
+  if (user) {
+    try { startLiveSyncEmployees(user.uid); } catch(e) {}
+    try { startLiveSyncAttendance(user.uid); } catch(e) {}
+  } else {
+    if (_empUnsub) { _empUnsub(); _empUnsub = null; }
+    if (_attUnsub) { _attUnsub(); _attUnsub = null; }
+    window._employees_cache = [];
+    window._attendance_cache = {};
+  }
+});
+</script>
+
 </body>
 </html>
